--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,12 @@
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
+  height: 5em;
   will-change: filter;
   transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 2em #64ff71aa);
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
@@ -39,4 +38,8 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.gameContainer {
+  background-color: black;
 }
