--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,14 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: rgba(255, 255, 255, 0.87);
+  color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
 }
 
 a {
@@ -29,12 +30,12 @@ body {
   min-width: 320px;
   min-height: 100vh;
 }
-
+/*
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
+*/
 button {
   border-radius: 8px;
   border: 1px solid transparent;
