--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding-top: 4em;
+  padding: 0 auto;
   text-align: center;
+  min-height: 100vh;
+  height: 100vh;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
 }
-
 .logo {
   height: 5em;
   will-change: filter;
